--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^7.1.5",
     "react-toast": "^1.0.3",
     "sass": "^1.84.0",
+    "swiper": "^11.2.3",
     "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
